# direct-transriberr

./: .dockerignore  .env.example  .gitignore  Claude.md  Dockerfile  Dockerfile.distroless  Dockerfile.light  Dockerfile.minimal  README.md  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml  test_30s_medium.json  test_5min.json
.github/workflows/: docker-build.yml
docs/: architecture.md  migration-plan.md
scripts/: transcribe-external.sh
src/direct_transcriber/: __init__.py  cli.py  formatter.py  memory.py  transcriber.py
src/direct_transcriber/core/: __init__.py  interfaces.py  models.py  whisper_transcriber.py
src/direct_transcriber/media/: __init__.py  extractor.py  formats.py  validator.py
src/direct_transcriber/output/: __init__.py  base.py  chunking.py  rag_markdown.py  rag_optimizer.py
src/direct_transcriber/utils/: __init__.py  files.py
